@@ -401,6 +401,12 @@ UDEB_COMPONENTS
   Archive components from which to fetch .udeb packages. Defaults to
   main/debian-installer.
 
+PRESEED
+  An initrd preseed file to put in the initrd.
+
+PRESEED_SUITE
+  An initrd preseed file to append to any other preseed file put in the
+  initrd by PRESEED; used to preseed the suite for daily builds.
 
 Rules invoked from the various targets:
 
