@@ -20,9 +20,11 @@
 
 # This variable can be used to add a preseed file to the initrd itself.
 # It will be loaded by the initrd-preseed udeb.
+PRESEED = 
+
 # Right now we want all d-i development and daily builds to use udebs from
-# unstable, so load the unstable.cfg.
-PRESEED ?= unstable.cfg
+# unstable, so load the unstable.cfg. This is disabled for official builds.
+PRESEED_SUITE ?= unstable.cfg
 
 # The library reducer to use. Can be mklibs.sh or mklibs.py.
 MKLIBS = mklibs 
