@@ -11,6 +11,7 @@ TYPE=bootfloppy
 KEYRING=
 # No debconf either, so no preseeding.
 PRESEED=
+PRESEED_SUITE=
 # Save some much needed space by compressing busybox. This is kind of a
 # trial too, if it works ok we might do this for all busybox binaries
 # later.
