@@ -26,7 +26,7 @@ clean:
 # Must run as root, so is not run as part of regular build.
 build-images:
 	$(MAKE) -C build all_build stats release \
-		SUITE=$(SUITE) BUILD_DATE=$(DATE) PRESEED=
+		SUITE=$(SUITE) BUILD_DATE=$(DATE) PRESEED_SUITE=
 	
 build: build-stamp
 build-stamp:
