@@ -6,7 +6,12 @@ debian-installer (20060307) UNRELEASED; urgency=low
   * Include essential kernel modules on the Netwinder cdrom initrd.
   * Fix a typo in the Cobalt preseed file.
 
- -- Martin Michlmayr <tbm@cyrius.com>  Tue, 07 Mar 2006 21:17:35 +0000
+  [ Joey Hess ]
+  * Split off PRESEED_SUITE from PRESEED, use this for the suite setting
+    for development builds, and no longer unset PRESEED for release builds.
+    Should fix cobalt issues.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 10 Mar 2006 13:09:46 -0500
 
 debian-installer (20060304) unstable; urgency=low
 
